retrieve_ENO_DEV1/objects/Approx_Running_Timing__c.object
<CustomObject>
    <fields>
        <fullName>Act__c</fullName>
        <label>Act</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overture</fullName>
                </value>
                <value>
                    <fullName>Act I</fullName>
                </value>
                <value>
                    <fullName>Act II</fullName>
                </value>
                <value>
                    <fullName>Act III</fullName>
                </value>
                <value>
                    <fullName>Act IV</fullName>
                </value>
                <value>
                    <fullName>Act V</fullName>
                </value>
                <value>
                    <fullName>Interval 1</fullName>
                </value>
                <value>
                    <fullName>Interval 2</fullName>
                </value>
                <value>
                    <fullName>Interval 3</fullName>
                </value>
                <value>
                    <fullName>Interval 4</fullName>
                </value>
                <value>
                    <fullName>Curtain Calls</fullName>
                </value>
                <value>
                    <fullName>Scene I</fullName>
                    <isActive>false</isActive>
                    <label>Scene I</label>
                </value>
                <value>
                    <fullName>Scene II</fullName>
                    <isActive>false</isActive>
                    <label>Scene II</label>
                </value>
                <value>
                    <fullName>Scene III</fullName>
                    <isActive>false</isActive>
                    <label>Scene III</label>
                </value>
                <value>
                    <fullName>Scene IV</fullName>
                    <isActive>false</isActive>
                    <label>Scene IV</label>
                </value>
                <value>
                    <fullName>Scene IX</fullName>
                    <isActive>false</isActive>
                    <label>Scene IX</label>
                </value>
                <value>
                    <fullName>Scene V</fullName>
                    <isActive>false</isActive>
                    <label>Scene V</label>
                </value>
                <value>
                    <fullName>Scene VI</fullName>
                    <isActive>false</isActive>
                    <label>Scene VI</label>
                </value>
                <value>
                    <fullName>Scene VII</fullName>
                    <isActive>false</isActive>
                    <label>Scene VII</label>
                </value>
                <value>
                    <fullName>Scene VIII</fullName>
                    <isActive>false</isActive>
                    <label>Scene VIII</label>
                </value>
                <value>
                    <fullName>Scene X</fullName>
                    <isActive>false</isActive>
                    <label>Scene X</label>
                </value>
                <value>
                    <fullName>Scene XI</fullName>
                    <isActive>false</isActive>
                    <label>Scene XI</label>
                </value>
                <value>
                    <fullName>Scene XII</fullName>
                    <isActive>false</isActive>
                    <label>Scene XII</label>
                </value>
                <value>
                    <fullName>Scene XIII</fullName>
                    <isActive>false</isActive>
                    <label>Scene XIII</label>
                </value>
                <value>
                    <fullName>Scene XIV</fullName>
                    <isActive>false</isActive>
                    <label>Scene XIV</label>
                </value>
                <value>
                    <fullName>Scene XV</fullName>
                    <isActive>false</isActive>
                    <label>Scene XV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_In_Mins__c</fullName>
        <label>Duration (In Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Summary__c</fullName>
        <label>Notes/Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <label>Run</label>
        <referenceTo>Run__c</referenceTo>
        <relationshipLabel>Approx Running Timings</relationshipLabel>
        <relationshipName>Approx_Running_Timings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scene__c</fullName>
        <label>Scene</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Act__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scene I</fullName>
                </value>
                <value>
                    <fullName>Scene II</fullName>
                </value>
                <value>
                    <fullName>Scene III</fullName>
                </value>
                <value>
                    <fullName>Scene IV</fullName>
                </value>
                <value>
                    <fullName>Scene V</fullName>
                </value>
                <value>
                    <fullName>Scene VI</fullName>
                </value>
                <value>
                    <fullName>Scene VII</fullName>
                </value>
                <value>
                    <fullName>Scene VIII</fullName>
                </value>
                <value>
                    <fullName>Scene IX</fullName>
                </value>
                <value>
                    <fullName>Scene X</fullName>
                </value>
                <value>
                    <fullName>Scene XI</fullName>
                </value>
                <value>
                    <fullName>Scene XII</fullName>
                </value>
                <value>
                    <fullName>Scene XIII</fullName>
                </value>
                <value>
                    <fullName>Scene XIV</fullName>
                </value>
                <value>
                    <fullName>Scene XV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approx Running Timing</label>
    <nameField>
        <displayFormat>ART-{00000000}</displayFormat>
        <label>Approx Running Timing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approx Running Timings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>